<resources>
    <string name="app_name">Minesweeper</string>
    <string name="source_code_webpage">https://github.com/TimiMakkonen/android-minesweeper</string>

    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">@string/app_name</string>
    <string name="settings_label">Settings</string>
    <string name="solution_label">Solution</string>

    <!-- Win/Lost Alerts -->
    <string name="win_alert_title">Congratulations! You have won!</string>
    <string name="lost_alert_title">You have lost!</string>

    <!-- Win/Lost Screen options -->
    <string name="play_again">Play Again</string>
    <string name="play_easy_game">Play Easy Game</string>
    <string name="play_medium_game">Play Medium Game</string>
    <string name="play_hard_game">Play Hard Game</string>
    <string name="play_clickable_custom_game">Play Custom Game</string>
    <string name="play_reasonable_custom_game">Play Reasonable Custom Game</string>
    <string name="play_unreasonable_custom_game">Play Unreasonable Custom Game</string>

    <!-- Menu buttons -->
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_game_menu">Game Menu</string>
    <string name="action_change_size">Change Size</string>
    <string name="action_restart_without_mines">Restart</string>
    <string name="action_restart_with_mines">Restart with mines</string>
    <string name="action_show_solution">Show solution</string>
    <string name="action_save_game">Save</string>
    <string name="action_new_game_easy">Easy</string>
    <string name="action_new_game_medium">Medium</string>
    <string name="action_new_game_hard">Hard</string>
    <string name="action_new_game_clickable_custom">Custom</string>
    <string name="action_new_game_reasonable_custom">Reasonable custom</string>
    <string name="action_new_game_unreasonable_custom">Unreasonable custom</string>

    <!-- General navigation buttons -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>

    <!-- New game selection titles -->
    <string name="new_game_dialog_title">New game</string>
    <string name="grid_height_selection_title">Grid height:</string>
    <string name="grid_width_selection_title">Grid width:</string>
    <string name="number_of_mines_selection_title">Number of mines:</string>

    <!-- Delete saved game dialog -->
    <string name="delete_saved_game_dialog_title">Delete saved game data?</string>
    <string name="delete_saved_game_dialog_message">This will delete the previously saved game.</string>

    <!-- Corrupted game save dialog -->
    <string name="corrupted_game_save_dialog_title">Save file was corrupted</string>
    <string name="corrupted_game_save_dialog_message">Deleted the save file and started a new game.</string>

    <!-- About page -->
    <string name="about_label">About</string>
    <string name="version_name">v%s</string>
    <string name="app_logo_description">Application logo</string>
    <string name="copyright_text">Copyright © 2020 Timi Makkonen</string>
    <string name="source_code_button">Source code</string>
    <string name="send_feedback_button">Send feedback</string>

    <!-- Feedback -->
    <string name="email">timi.makkonen@gmail.com</string>
    <string name="feedback_email_subject">Android Minesweeper - V:%s OS:%s SDK:%d D:%s M:%s P:%s</string>

    <!-- Various strings -->

</resources>
