<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.timimakkonen.minesweeper.GameFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_FirstFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.timimakkonen.minesweeper.SettingsFragment"
        android:label="@string/settings_label" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.timimakkonen.minesweeper.AboutFragment"
        android:label="@string/about_label"
        tools:layout="@layout/fragment_about" />
    <action
        android:id="@+id/action_global_aboutFragment"
        app:destination="@id/aboutFragment" />
</navigation>
