<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="?dialogPreferredPadding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grid_height_selection_title" />

    <com.timimakkonen.minesweeper.MaterialIntSliderAndEditText
        android:id="@+id/sliderandedittext_grid_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grid_width_selection_title" />

    <com.timimakkonen.minesweeper.MaterialIntSliderAndEditText
        android:id="@+id/sliderandedittext_grid_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_mines_selection_title" />

    <com.timimakkonen.minesweeper.MaterialIntSliderAndEditText
        android:id="@+id/sliderandedittext_grid_num_of_mines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>